--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "cv-template",
   "version": "1.0.0",
@@ -11,25 +10,25 @@
     "type": "git",
     "url": "git://github.com/padsbanger/grunt-angular-boilerplate.git"
   },
-
   "author": "Michal Lach",
   "license": "MIT",
   "devDependencies": {
-    "grunt-concurrent": "^1.0.0",
+    "connect-modrewrite": "^0.8.2",
     "grunt-cli": "^0.1.13",
-    "less": "^2.5.0",
-    "grunt-mkdir": "^0.1.2",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.10.1",
-    "load-grunt-tasks": "^3.1.0",
-    "grunt-newer": "^1.1.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.8.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "time-grunt": "^1.1.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.10.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "matchdep": "^0.3.0"
+    "grunt-mkdir": "^0.1.2",
+    "grunt-newer": "^1.1.0",
+    "less": "^2.5.0",
+    "load-grunt-tasks": "^3.1.0",
+    "matchdep": "^0.3.0",
+    "time-grunt": "^1.1.0"
   }
 }
