--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "less": "^2.5.0",
     "load-grunt-tasks": "^3.1.0",
     "matchdep": "^0.3.0",
-    "time-grunt": "^1.1.0",
-    "connect-modrewrite": "^0.8.2"
+    "time-grunt": "^1.1.0"
   }
 }
